src/FinancialForce Accounting/objects/InquiryTemplateRCP__c.object
<CustomObject>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>DataviewField__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dataview Field</label>
        <referenceTo>DataViewField__c</referenceTo>
        <relationshipLabel>Inquiry Template RCPs</relationshipLabel>
        <relationshipName>InquiryTemplateRCPs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InquiryTemplate__c</fullName>
        <label>Inquiry Template</label>
        <referenceTo>InquiryTemplate__c</referenceTo>
        <relationshipLabel>Inquiry Template RCPs</relationshipLabel>
        <relationshipName>InquiryTemplateRCPs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RelatedContentPane__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Content Pane</label>
        <referenceTo>RelatedContentPane__c</referenceTo>
        <relationshipLabel>Inquiry Template RCPs</relationshipLabel>
        <relationshipName>InquiryTemplateRCPs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>zDeprecated:Inquiry Template RCP</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inquiry Template RCPs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>